# micro-panel

./: .clang-format  .gitignore  .gitmodules  .sonarcloud.properties  CMakeLists.txt  Makefile  README.md  flash.sh  nrf52840_s140_v7.ld  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yaml
docker/: Dockerfile
docs/source/: conf.py  index.rst
lib/: CMakeLists.txt  submodules.cmake
scripts/: format.py
src/: hardware.h  main.c  main.cpp
src/boards/: custom_board.h  seeed_xiao_ble_sense.h
src/config/: sdk_config.h
src/driver/: i2c.cpp  i2c.hpp  oled.cpp  oled.hpp
